...
          paddingTop: 5,
        },
        tabBarIcon: ({ color, size }) => {
          let iconName;

          switch (route.name) {
            case "Home":
              iconName = "home-outline";
              break;
            case "Search":
              iconName = "search-outline";
              break;
            case "Your Profile":
              iconName = "person-outline";
              break;
            case "MovieList":
              iconName = "list-outline";
              break;
            default:
...
