...
      <TouchableOpacity
        style={styles.button}
        onPress={() =>
          navigation.navigate("MovieDetails", { id: landingMovie?.id })
        }
      >
        <Text style={styles.buttonText}>▶ See More</Text>
      </TouchableOpacity>

      <MovieCarousel
        title="Most Popular Today"
        movies={popular}
        onPressMovie={(movie) =>
...
